[package]

name = "fdringbuf"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Ringbuffer with FD signalling - fast IPC without memory copies!"
repository = "https://github.com/diwic/fdringbuf-rs"
keywords = ["ringbuffer", "fd", "IPC", "filedescriptor", "eventfd"]
license = "Apache-2.0/MIT"

[dependencies]
libc = "*"
log = "*"

[dev-dependencies.nix]
nix = "*"
# Nix on crates.io is currently broken w r t eventfd
git = "https://github.com/carllerche/nix-rust"

[dev-dependencies.mio]
mio = "*"

[features]
default = ["nix/eventfd"]
