[package]

name = "fdringbuf"
version = "0.1.0"
authors = ["David Henningsson <coding@diwic.se>"]

description = "Deprecated - use the shmem-ipc crate instead"
repository = "https://github.com/diwic/fdringbuf-rs"
keywords = ["ringbuffer", "fd", "IPC", "filedescriptor", "eventfd"]
license = "Apache-2.0/MIT"
maintenance = { status = "deprecated" }

[dependencies]
libc = "*"
log = "*"

[dev-dependencies.nix]
nix = "*"
# Nix on crates.io is currently broken w r t eventfd
git = "https://github.com/carllerche/nix-rust"

[dev-dependencies.mio]
mio = "*"

[features]
default = ["nix/eventfd"]
